# note-taker

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.sh  socratic_fp_learning.md
commands/: capture-notes.md  create-flash-card.md  quiz.md
flashcard_study/: __init__.py  __main__.py  app.py  cli.py  config.py
flashcard_study/data/: __init__.py  models.py  repository.py
flashcard_study/domain/: anki_exporter.py  card_selector.py  spaced_repetition.py  statistics.py
flashcard_study/ui/: __init__.py
flashcard_study/ui/screens/: __init__.py  card_form.py  card_list.py  home.py  quiz.py  statistics.py
flashcard_study/ui/styles/: __init__.py  app.tcss
flashcard_study/ui/widgets/: card_display.py  stat_card.py
tests/: __init__.py
